Testing Analytics, Trying to Track Site Views.

--- a/index.html
+++ b/index.html
@@ -66,10 +66,21 @@
         <h2>Update Log</h2>
         <ul>
             <li><strong>2025-11-29:</strong> Fixed Multi-Trait Scaling and Merged Output to 1 line per ore type..</li>
-            <li><strong>2025-11-29:</strong> V1.0 Release of Calculator, Barebone No Styling. Multi Trait Scaling broken.</li>
+            <li><strong>2025-11-29:</strong> V1.0 Release of Calculator, Barebone No Styling. Multi Trait Scaling
+                broken.</li>
             <li>@Otakusonline With Bug Information.</li>
         </ul>
     </aside>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E61SFC3B91"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-E61SFC3B91');
+    </script>
 
     <script>
         let ores = {};
